# Amlexia

./: .gitignore  PUBLISHING.md  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml
docs/: AI_SETUP_PROMPTS.md  ENVIRONMENT_VARIABLES.md  EVENT_FIELDS.md  GETTING_STARTED.md
examples/: README.md
examples/node-express/: README.md  package.json
examples/node-express/src/: index.ts
examples/python-fastapi/: README.md  main.py  requirements.txt
sdks/go/: README.md  anthropic.go  client.go  cost.go  diagnostic.go  go.mod  health.go  http_wrap.go  openai.go  sampling.go  tracing.go
sdks/go/cmd/amlexia/: main.go
sdks/node/: README.md  package.json
sdks/node/src/: client.ts  diagnostic.ts  express.ts  fastify.ts  health.ts  hono.ts  http-wrap.ts  index.ts  next.ts  otel-bridge.ts  tracing.ts  types.ts
sdks/node/src/ai/: anthropic.ts  openai.ts
sdks/python/: .gitignore  LICENSE  README.md  pyproject.toml
sdks/python/src/amlexia/: __init__.py  anthropic_helper.py  cli.py  client.py  cost.py  diagnostic.py  django_integration.py  fastapi_integration.py  flask_integration.py  health.py  http_wrap.py  openai_helper.py  providers.py  sampling.py  tracing.py
sdks/ruby/: README.md  amlexia.gemspec
sdks/ruby/exe/: amlexia
sdks/ruby/lib/: amlexia.rb
sdks/ruby/lib/amlexia/: anthropic.rb  client.rb  cost.rb  diagnostic.rb  health.rb  http_wrap.rb  openai.rb  sampling.rb  tracing.rb  version.rb
