[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amlexia"
version = "1.0.2"
description = "Official Amlexia Python SDK — monitor APIs, AI providers, payments, and infrastructure with traces, latency, and provider intelligence."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary. See LICENSE file. Not open source." }
authors = [{ name = "Amlexia", email = "support@amlexia.com" }]
maintainers = [{ name = "Amlexia", email = "support@amlexia.com" }]
keywords = [
  "amlexia",
  "observability",
  "apm",
  "monitoring",
  "tracing",
  "fastapi",
  "flask",
  "django",
  "opentelemetry",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "urllib3>=1.26.0",
]

[project.optional-dependencies]
flask = ["flask>=2.0.0"]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]

[project.scripts]
amlexia = "amlexia.cli:main"

[project.urls]
Homepage = "https://amlexia.com"
Documentation = "https://amlexia.com"
Repository = "https://github.com/amlexiahq/amlexia"
"Bug Reports" = "https://amlexia.com/contact"
Terms = "https://amlexia.com/terms"
Privacy = "https://amlexia.com/privacy"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
